test/integration/bad/new/location-scale-bad2.stan
data { vector<offset = T, multiplier = T,> x;}